# fraudescartao

./: .gitignore  README.md  business_summary.md
.github/workflows/: python.yml
notebooks/: 01_roteiro_analise.py  pyproject.toml
src/fraud_detection/: __init__.py  config.py
src/fraud_detection/src/fraud_detection/: data.py
src/fraud_detection/src/src/fraud_detection/: predict.py
src/fraud_detection/src/src/fraud_detection/src/fraud_detection/: train.py
