[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-card-fraud-dio-finance"
version = "0.1.0"
description = "Projeto de deteccao de fraudes em cartoes de credito para portfolio DIO."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib==1.4.2",
  "numpy==2.0.2",
  "pandas==2.2.2",
  "pytest==8.3.2",
  "scipy==1.14.1",
  "scikit-learn==1.5.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
